# fominscode

./: CMakeLists.txt  main.cpp  mainwindow.hpp
